opam-version: "2.0"
compiler: [
  "base-bigarray.base"
  "base-domains.base"
  "base-effects.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "ocaml.5.3.0"
  "ocaml-base-compiler.5.3.0"
  "ocaml-compiler.5.3.0"
  "ocaml-config.3"
  "ocaml-options-vanilla.1"
]
roots: [
  "bisect_ppx.2.8.3"
  "lwt_ppx.5.9.1"
  "menhir.20240715"
  "ocaml-base-compiler.5.3.0"
  "ocaml-lsp-server.1.23.0"
  "ocamlformat.0.27.0"
  "odoc.3.1.0"
  "ounit2.2.2.7"
  "qcheck.0.26"
  "utop.2.16.0"
  "zarith.1.14"
]
installed: [
  "astring.0.8.5"
  "base.v0.17.3"
  "base-bigarray.base"
  "base-bytes.base"
  "base-domains.base"
  "base-effects.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "bisect_ppx.2.8.3"
  "camlp-streams.5.0.1"
  "chrome-trace.3.19.1"
  "cmdliner.1.3.0"
  "conf-gmp.5"
  "conf-pkg-config.4"
  "cppo.1.8.0"
  "crunch.4.0.0"
  "csexp.1.5.2"
  "dune.3.19.1"
  "dune-build-info.3.19.1"
  "dune-configurator.3.19.1"
  "dune-rpc.3.19.1"
  "dyn.3.19.1"
  "either.1.0.0"
  "fiber.3.7.0"
  "fix.20250428"
  "fmt.0.11.0"
  "fpath.0.7.3"
  "jsonrpc.1.23.0"
  "lambda-term.3.3.2"
  "logs.0.9.0"
  "lsp.1.23.0"
  "lwt.5.9.1"
  "lwt_ppx.5.9.1"
  "lwt_react.1.2.0"
  "menhir.20240715"
  "menhirCST.20240715"
  "menhirLib.20240715"
  "menhirSdk.20240715"
  "merlin-lib.5.5-503"
  "mew.0.1.0"
  "mew_vi.0.5.0"
  "ocaml.5.3.0"
  "ocaml-base-compiler.5.3.0"
  "ocaml-compiler.5.3.0"
  "ocaml-compiler-libs.v0.17.0"
  "ocaml-config.3"
  "ocaml-lsp-server.1.23.0"
  "ocaml-options-vanilla.1"
  "ocaml-version.4.0.1"
  "ocaml_intrinsics_kernel.v0.17.1"
  "ocamlbuild.0.16.1"
  "ocamlc-loc.3.19.1"
  "ocamlfind.1.9.8"
  "ocamlformat.0.27.0"
  "ocamlformat-lib.0.27.0"
  "ocamlformat-rpc-lib.0.27.0"
  "ocp-indent.1.8.1"
  "ocplib-endian.1.2"
  "odoc.3.1.0"
  "odoc-parser.3.1.0"
  "ordering.3.19.1"
  "ounit2.2.2.7"
  "pp.2.0.0"
  "ppx_derivers.1.2.1"
  "ppx_yojson_conv_lib.v0.17.0"
  "ppxlib.0.35.0"
  "ptime.1.2.0"
  "qcheck.0.26"
  "qcheck-core.0.26"
  "qcheck-ounit.0.26"
  "re.1.13.2"
  "react.1.2.2"
  "result.1.5"
  "seq.base"
  "sexplib0.v0.17.0"
  "spawn.v0.17.0"
  "stdio.v0.17.0"
  "stdlib-shims.0.3.0"
  "stdune.3.19.1"
  "topkg.1.1.0"
  "trie.1.0.0"
  "tyxml.4.6.0"
  "uchar.0.0.2"
  "utop.2.16.0"
  "uucp.16.0.0"
  "uuseg.16.0.0"
  "uutf.1.0.4"
  "xdg.3.19.1"
  "yojson.2.2.2"
  "zarith.1.14"
  "zed.3.2.3"
]
